# bucky_backup_suite

./: .gitignore  LICENSE  README.md  README_zhCN.md
.github/workflows/: build-installer.yml
components/: Cargo.toml
components/dmcx/common/src/: utils.rs
components/dmcx/user/src/journal/: mod.rs
components/dmcx/user/src/source/: backend.rs
components/s3/: Cargo.toml
components/s3/src/: lib.rs  target.rs
core/: Cargo.toml
core/chunk/: Cargo.toml
core/chunk/src/: chunk.rs  error.rs  lib.rs  local_store.rs  target.rs
core/chunk/src/http/: client.rs  server.rs
core/dmcx/: Cargo.toml
core/dmcx/src/: lib.rs  sector.rs  server.rs
core/dmcx/src/sector/: encrypt.rs  mod.rs  sector.rs
core/framework/: Cargo.toml
core/framework/src/: checkpoint.rs  checkpoint_impl.rs  engine.rs  engine_impl.rs  error.rs  lib.rs  meta.rs  source.rs  source_wrapper.rs  status_waiter.rs  storage.rs  target.rs  task.rs  task_impl.rs
core/sector/: Cargo.toml
core/sector/src/: decrypt.rs  encrypt.rs  lib.rs  sector.rs  store.rs
core/sector/tests/: test_decrypt.rs  test_encrypt.rs  test_sector.rs
core/sector/tests/common/: mod.rs
dmcx/: Cargo.toml
dmcx/user/: Cargo.toml
dmcx/user/journal/: Cargo.toml
dmcx/user/src/: lib.rs
dmcx/user/src/journal/: backend.rs
dmcx/user/src/source/: types.rs
doc/: demo.py  重构思考.md
doc/PM/framework/: Pseudo-Code.md  db.sql  draft.drawio  meta.md  plan.md  plan_zhCN.md  proposal.md  proposal_zhCN.md
doc/PM/framework/Pseudo-Code/: backup.sh  engine.py  source.py  target.py
doc/PM/services/DMC/: proposal.md  sector_zhCN.md
doc/PRD/: UI.drawio
hack_night/src/: Cargo.toml  readme.md
hack_night/src/backup_suite/: Cargo.toml
hack_night/src/backup_suite/src/: engine.rs  main.rs  task_db.rs
hack_night/src/components/backup-lib/: Cargo.toml
hack_night/src/components/backup-lib/src/: lib.rs  local_chunk_provider.rs  provider.rs
hack_night/src/components/dir-source/: Cargo.toml
src/: Cargo.toml  bucky_project.yaml
src/backup_suite/: Cargo.toml  bucky_backup.db
src/backup_suite/src/: engine.rs  engine_old.rs  file_system_monitor.rs  main.rs  snapshot.rs  task_db.rs  web_control.rs  work_task.rs
src/components/backup-lib/: Cargo.toml
src/components/backup-lib/src/: chunk_inner_path_helper.rs  def.rs  lib.rs  local_chunk_provider.rs  provider.rs  range_reader.rs  toolbox.rs  url_helper.rs
src/components/chunk/: Cargo.toml
src/components/chunk/src/: chunk.rs  error.rs  lib.rs  local_store.rs  source.rs  target.rs
src/components/chunk/src/http/: client.rs  mod.rs  server.rs
src/components/dir-source/: Cargo.toml  readme.md
src/components/dir-source/src/: dir_source.rs  lib.rs
src/components/sector/: Cargo.toml
src/components/sector/src/: decrypt.rs  encrypt.rs  lib.rs  sector.rs  store.rs
src/components/sector/tests/: test_encrypt.rs
src/components/sector/tests/common/: mod.rs
src/framework/: Cargo.toml
src/framework/src/: build_meta.rs  checkpoint.rs  checkpoint_impl.rs  engine.rs  engine_impl.rs  error.rs  lib.rs  meta.rs  meta_storage.rs  sector.rs  source.rs  source_wrapper.rs  storage.rs  target.rs  target_wrapper.rs  task.rs  task_impl.rs
src/plugins/dmcx/common/: Cargo.toml
src/plugins/dmcx/common/src/: lib.rs  merkle.rs
src/plugins/dmcx/user/: Cargo.toml
src/plugins/dmcx/user/src/source/: backend.rs  mod.rs
src/plugins/s3/: Cargo.toml
src/plugins/s3/src/: lib.rs
src/plugins/s3/tests/: test_s3_chunk.rs  test_s3_provider.rs
src/scripts/: build.py  build_rust.py  build_web_apps.py  install.py  make_deb.py  perpare_rootfs.py  prepare_rootfs.py
src/webui/: README.md  index.html  package.json  pnpm-lock.yaml
src/webui/src/: App.tsx  index.css  index.html  index.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.mts
src/webui/src/components/: AddServiceWizard.tsx  BackupPlans.tsx  CreatePlanWizard.tsx  Dashboard.tsx  DirectorySelector.tsx  EditPlanWizard.tsx  LoadingPage.tsx  PlanDetails.tsx  RestoreWizard.tsx  ServiceManagement.tsx  Settings.tsx  Sidebar.tsx  TaskDetail.tsx  TaskList.tsx  ThemeProvider.tsx  bs_plan_panel.template  bs_plan_panel.ts  bs_s3_config.template  bs_s3_config.ts  bs_task_panel.template  bs_task_panel.ts  bs_tasklist.ts  panel_list.ts  wizzard_dlg.template  wizzard_dlg.ts
src/webui/src/components/hooks/: use-mobile.ts  use_backup_log.ts  use_mobile.ts
src/webui/src/components/i18n/: LanguageProvider.tsx  index.ts
src/webui/src/components/model/: backup_log_reader.ts  call_in_interval.ts  plan_mgr.ts  target_mgr.ts
src/webui/src/components/ui/: tabs.tsx
src/webui/src/components/utils/: fake_task_mgr.ts  mock_file_system.ts  mock_task_mgr.ts  task_mgr.ts  task_mgr_helper.ts
src/webui/src/dlg/: create_plan_dlg.template  create_plan_dlg.ts  restore_checkpoint_dlg.template  restore_checkpoint_dlg.ts  restore_select_target_dlg.template  restore_select_target_dlg.ts  select_target_dlg.template  select_target_dlg.ts  set_backup_timer_dlg.template  set_backup_timer_dlg.ts
src/webui/src/styles/: globals.css
src/webui/src/utils/: task_mgr.ts
