[workspace]
resolver = "2"

members = [
    #"./components/backup-lib",
    #"./components/gateway-lib",
    "./components/backup-lib",
    "./components/dir-source",
    "./components/chunk",
    "./components/sector",
    "./backup_suite",
    "./plugins/dmcx/common",
    "./plugins/dmcx/user",
]
