[package]
name = "dmcx"
version = "0.1.0"
edition = "2021"

[dependencies]
chunk = { path = "../chunk" }
sha2 = "0.10"
base58 = "0.2"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
async-std = { version = "1.12", features = ["attributes"] }
aes = "0.8.4"
generic-array = "0.14" 
cbc = "0.1"
cipher = "0.4"
rs_merkle = "1.4"
