[package]
name = "dmc-tools-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]

[dependencies]
log = "*"
sqlx = { version = "0.6", features = ["runtime-async-std-rustls", "macros", "chrono" ] }
async-trait = "0.1.53"
async-std = "*"
futures = { version = '0.3', features = ['default', 'thread-pool'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tide = "0.16.0"
surf = { version = '2.3.2', default-features = false, features = ['h1-client-rustls'] }
toml = "*"
url_params_serializer = "*"
chrono = "*"
async-recursion = "1.0.0"
rand = "*"
dmc-tools-common = { path = '../common' }