[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = '*'
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
log = "*"
thiserror = "*"
uuid = { version = "*", features = ["v4"] }
sha2 = {version = '*'}
bs58 = "*"