[package]
name = "chunk"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1.0" 
anyhow = "1.0"
sha2 = "0.10"
base58 = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
async-trait = "0.1"
async-std = { version = "1.12", features = ["attributes"] }
surf = "2.3"  
tide = "0.16" 
http-types = '2.12'
sqlx = { version = '0.6', features = ["runtime-async-std-rustls", "sqlite"]}
futures = "0.3"  