[package]
name = "s3-chunk-target"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "*"
anyhow = "*"
async-trait = "0.1"
futures = "0.3"
buckyos-backup-lib = { path = "../../components/backup-lib" }
aws-config = "1.0"
aws-sdk-s3 = "1.5"
aws-credential-types = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndn-lib = { git = "https://github.com/buckyos/cyfs-ndn", branch = "beta1" } 
url = "2.5.0"
log = "*"

[dev-dependencies]
rand = "0.8"
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base"}